Fix table spacing in all words page

--- a/app/pages/words-all/style.scss
+++ b/app/pages/words-all/style.scss
@@ -5,11 +5,11 @@ gelato-page[data-name='words-all'] {
     margin-top: 30px;
   }
 
-  th .glyphicon {
+  td .glyphicon {
     display: none;
   }
 
-  th.active .glyphicon {
+  td.active .glyphicon {
     display: inline;
     margin-left: 5px;
     position: relative;
@@ -17,7 +17,11 @@ gelato-page[data-name='words-all'] {
   }
 
   .checkbox-td {
-    width: 5%;
+    width: 10%;
+  }
+
+  .word-td {
+    width: 50%;
   }
 
   .writing-td {
@@ -29,7 +33,7 @@ gelato-page[data-name='words-all'] {
   }
 
   .definition-td {
-    width: 30%;
+    width: 25%;
   }
 
   .last-td {
